cmake_minimum_required(VERSION 3.19)
project(wangdao_code)

set(CMAKE_CXX_STANDARD 14)

add_executable(2_2_1 2_2_线性表/第一题/2_2_1.cpp 2_2_线性表/第一题/2_2_1.h)
add_executable(2_2_2 2_2_线性表/第二题/2_2_2.cpp 2_2_线性表/第二题/2_2_2.h)
add_executable(2_2_3 2_2_线性表/第三题/2_2_3.cpp 2_2_线性表/第三题/2_2_3.h)
add_executable(2_2_4 2_2_线性表/第四题/2_2_4.cpp 2_2_线性表/第四题/2_2_4.h)
add_executable(2_2_5 2_2_线性表/第五题/2_2_5.cpp 2_2_线性表/第五题/2_2_5.h)
add_executable(2_2_6 2_2_线性表/第六题/2_2_6.cpp 2_2_线性表/第六题/2_2_6.h)
add_executable(2_2_7 2_2_线性表/第七题/2_2_7.cpp 2_2_线性表/第七题/2_2_7.h)
add_executable(2_2_8 2_2_线性表/第八题/2_2_8.cpp 2_2_线性表/第八题/2_2_8.h)
add_executable(2_2_9 2_2_线性表/第九题/2_2_9.cpp 2_2_线性表/第九题/2_2_9.h)
add_executable(2_2_10 2_2_线性表/第十题/2_2_10.cpp 2_2_线性表/第十题/2_2_10.h)
