cmake_minimum_required(VERSION 3.19)
project(wangdao_code)

set(CMAKE_CXX_STANDARD 14)

# 第二章 顺序表
add_executable(2_2_1 第二章_线性表/2_2_顺序表/第一题/2_2_1.cpp 第二章_线性表/2_2_顺序表/第一题/2_2_1.h)
add_executable(2_2_2 第二章_线性表/2_2_顺序表/第二题/2_2_2.cpp 第二章_线性表/2_2_顺序表/第二题/2_2_2.h)
add_executable(2_2_3 第二章_线性表/2_2_顺序表/第三题/2_2_3.cpp 第二章_线性表/2_2_顺序表/第三题/2_2_3.h)
add_executable(2_2_4 第二章_线性表/2_2_顺序表/第四题/2_2_4.cpp 第二章_线性表/2_2_顺序表/第四题/2_2_4.h)
add_executable(2_2_5 第二章_线性表/2_2_顺序表/第五题/2_2_5.cpp 第二章_线性表/2_2_顺序表/第五题/2_2_5.h)
add_executable(2_2_6 第二章_线性表/2_2_顺序表/第六题/2_2_6.cpp 第二章_线性表/2_2_顺序表/第六题/2_2_6.h)
add_executable(2_2_7 第二章_线性表/2_2_顺序表/第七题/2_2_7.cpp 第二章_线性表/2_2_顺序表/第七题/2_2_7.h)
add_executable(2_2_8 第二章_线性表/2_2_顺序表/第八题/2_2_8.cpp 第二章_线性表/2_2_顺序表/第八题/2_2_8.h)
add_executable(2_2_9 第二章_线性表/2_2_顺序表/第九题/2_2_9.cpp 第二章_线性表/2_2_顺序表/第九题/2_2_9.h)
add_executable(2_2_10 第二章_线性表/2_2_顺序表/第十题/2_2_10.cpp 第二章_线性表/2_2_顺序表/第十题/2_2_10.h)
add_executable(2_2_11 第二章_线性表/2_2_顺序表/第十一题/2_2_11.cpp 第二章_线性表/2_2_顺序表/第十一题/2_2_11.h)
add_executable(2_2_12 第二章_线性表/2_2_顺序表/第十二题/2_2_12.cpp 第二章_线性表/2_2_顺序表/第十二题/2_2_12.h)
add_executable(2_2_13 第二章_线性表/2_2_顺序表/第十三题/2_2_13.cpp 第二章_线性表/2_2_顺序表/第十三题/2_2_13.h)
add_executable(2_2_14 第二章_线性表/2_2_顺序表/第十四题/2_2_14.cpp 第二章_线性表/2_2_顺序表/第十四题/2_2_14.h)

# 第二章 链表
add_executable(2_3_1 第二章_线性表/2_3_链表/第一题/2_3_1.cpp 第二章_线性表/2_3_链表/第一题/2_3_1.h)
add_executable(2_3_2 第二章_线性表/2_3_链表/第二题/2_3_2.cpp 第二章_线性表/2_3_链表/第二题/2_3_2.h)
add_executable(2_3_3 第二章_线性表/2_3_链表/第三题/2_3_3.cpp 第二章_线性表/2_3_链表/第三题/2_3_3.h)
add_executable(2_3_4 第二章_线性表/2_3_链表/第四题/2_3_4.cpp 第二章_线性表/2_3_链表/第四题/2_3_4.h)
add_executable(2_3_5 第二章_线性表/2_3_链表/第五题/2_3_5.cpp 第二章_线性表/2_3_链表/第五题/2_3_5.h)