cmake_minimum_required(VERSION 3.19)
project(wangdao_code)

set(CMAKE_CXX_STANDARD 14)

# 第二章 顺序表
add_executable(2_2_1 第二章_线性表/2_2_顺序表/第一题/2_2_1.cpp 第二章_线性表/2_2_顺序表/第一题/2_2_1.h)
add_executable(2_2_2 第二章_线性表/2_2_顺序表/第二题/2_2_2.cpp 第二章_线性表/2_2_顺序表/第二题/2_2_2.h)
add_executable(2_2_3 第二章_线性表/2_2_顺序表/第三题/2_2_3.cpp 第二章_线性表/2_2_顺序表/第三题/2_2_3.h)
add_executable(2_2_4 第二章_线性表/2_2_顺序表/第四题/2_2_4.cpp 第二章_线性表/2_2_顺序表/第四题/2_2_4.h)
add_executable(2_2_5 第二章_线性表/2_2_顺序表/第五题/2_2_5.cpp 第二章_线性表/2_2_顺序表/第五题/2_2_5.h)
add_executable(2_2_6 第二章_线性表/2_2_顺序表/第六题/2_2_6.cpp 第二章_线性表/2_2_顺序表/第六题/2_2_6.h)
add_executable(2_2_7 第二章_线性表/2_2_顺序表/第七题/2_2_7.cpp 第二章_线性表/2_2_顺序表/第七题/2_2_7.h)
add_executable(2_2_8 第二章_线性表/2_2_顺序表/第八题/2_2_8.cpp 第二章_线性表/2_2_顺序表/第八题/2_2_8.h)
add_executable(2_2_9 第二章_线性表/2_2_顺序表/第九题/2_2_9.cpp 第二章_线性表/2_2_顺序表/第九题/2_2_9.h)
add_executable(2_2_10 第二章_线性表/2_2_顺序表/第十题/2_2_10.cpp 第二章_线性表/2_2_顺序表/第十题/2_2_10.h)
add_executable(2_2_11 第二章_线性表/2_2_顺序表/第十一题/2_2_11.cpp 第二章_线性表/2_2_顺序表/第十一题/2_2_11.h)
add_executable(2_2_12 第二章_线性表/2_2_顺序表/第十二题/2_2_12.cpp 第二章_线性表/2_2_顺序表/第十二题/2_2_12.h)
add_executable(2_2_13 第二章_线性表/2_2_顺序表/第十三题/2_2_13.cpp 第二章_线性表/2_2_顺序表/第十三题/2_2_13.h)
add_executable(2_2_14 第二章_线性表/2_2_顺序表/第十四题/2_2_14.cpp 第二章_线性表/2_2_顺序表/第十四题/2_2_14.h)

# 第二章 链表
add_executable(2_3_1 第二章_线性表/2_3_链表/第一题/2_3_1.cpp 第二章_线性表/2_3_链表/第一题/2_3_1.h)
add_executable(2_3_2 第二章_线性表/2_3_链表/第二题/2_3_2.cpp 第二章_线性表/2_3_链表/第二题/2_3_2.h)
add_executable(2_3_3 第二章_线性表/2_3_链表/第三题/2_3_3.cpp 第二章_线性表/2_3_链表/第三题/2_3_3.h)
add_executable(2_3_4 第二章_线性表/2_3_链表/第四题/2_3_4.cpp 第二章_线性表/2_3_链表/第四题/2_3_4.h)
add_executable(2_3_5 第二章_线性表/2_3_链表/第五题/2_3_5.cpp 第二章_线性表/2_3_链表/第五题/2_3_5.h)
add_executable(2_3_6 第二章_线性表/2_3_链表/第六题/2_3_6.cpp 第二章_线性表/2_3_链表/第六题/2_3_6.h)
add_executable(2_3_8 第二章_线性表/2_3_链表/第八题/2_3_8.cpp 第二章_线性表/2_3_链表/第八题/2_3_8.h)
add_executable(2_3_9 第二章_线性表/2_3_链表/第九题/2_3_9.cpp 第二章_线性表/2_3_链表/第九题/2_3_9.h)
add_executable(2_3_10 第二章_线性表/2_3_链表/第十题/2_3_10.cpp 第二章_线性表/2_3_链表/第十题/2_3_10.h)
add_executable(2_3_11 第二章_线性表/2_3_链表/第十一题/2_3_11.cpp 第二章_线性表/2_3_链表/第十一题/2_3_11.h)
add_executable(2_3_12 第二章_线性表/2_3_链表/第十二题/2_3_12.cpp 第二章_线性表/2_3_链表/第十二题/2_3_12.h)
add_executable(2_3_13 第二章_线性表/2_3_链表/第十三题/2_3_13.cpp 第二章_线性表/2_3_链表/第十三题/2_3_13.h)
add_executable(2_3_14 第二章_线性表/2_3_链表/第十四题/2_3_14.cpp 第二章_线性表/2_3_链表/第十四题/2_3_14.h)
add_executable(2_3_15 第二章_线性表/2_3_链表/第十五题/2_3_15.cpp 第二章_线性表/2_3_链表/第十五题/2_3_15.h)
add_executable(2_3_16 第二章_线性表/2_3_链表/第十六题/2_3_16.cpp 第二章_线性表/2_3_链表/第十六题/2_3_16.h)
add_executable(2_3_17 第二章_线性表/2_3_链表/第十七题/2_3_17.cpp 第二章_线性表/2_3_链表/第十七题/2_3_17.h)
add_executable(2_3_18 第二章_线性表/2_3_链表/第十八题/2_3_18.cpp 第二章_线性表/2_3_链表/第十八题/2_3_18.h)
add_executable(2_3_19 第二章_线性表/2_3_链表/第十九题/2_3_19.cpp 第二章_线性表/2_3_链表/第十九题/2_3_19.h)
add_executable(2_3_20 第二章_线性表/2_3_链表/第二十题/2_3_20.cpp 第二章_线性表/2_3_链表/第二十题/2_3_20.h)
add_executable(2_3_21 第二章_线性表/2_3_链表/第二十一题/2_3_21.cpp 第二章_线性表/2_3_链表/第二十一题/2_3_21.h)
add_executable(2_3_22 第二章_线性表/2_3_链表/第二十二题/2_3_22.cpp 第二章_线性表/2_3_链表/第二十二题/2_3_22.h)
add_executable(2_3_23 第二章_线性表/2_3_链表/第二十三题/2_3_23.cpp 第二章_线性表/2_3_链表/第二十三题/2_3_23.h)
add_executable(2_3_24 第二章_线性表/2_3_链表/第二十四题/2_3_24.cpp 第二章_线性表/2_3_链表/第二十四题/2_3_24.h)
add_executable(2_3_25 第二章_线性表/2_3_链表/第二十五题/2_3_25.cpp 第二章_线性表/2_3_链表/第二十五题/2_3_25.h)

# 第三章 栈和队列
add_executable(3_1_3 第三章_栈和队列/3_1_栈/第三题/3_1_3.cpp)
add_executable(3_1_4 第三章_栈和队列/3_1_栈/第四题/3_1_4.cpp)
add_executable(3_1_5 第三章_栈和队列/3_1_栈/第五题/3_1_5.cpp)
add_executable(3_2_1 第三章_栈和队列/3_2_队列/第一题/3_2_1.cpp)
add_executable(3_2_2 第三章_栈和队列/3_2_队列/第二题/3_2_2.cpp)
add_executable(3_2_3 第三章_栈和队列/3_2_队列/第三题/3_2_3.cpp)
add_executable(3_2_4 第三章_栈和队列/3_2_队列/第四题/3_2_4.cpp)
add_executable(3_3_1 第三章_栈和队列/3_3_栈和队列的应用/第一题/3_3_1.cpp)
add_executable(3_3_2 第三章_栈和队列/3_3_栈和队列的应用/第二题/3_3_2.cpp)
add_executable(3_3_3 第三章_栈和队列/3_3_栈和队列的应用/第三题/3_3_3.cpp)
add_executable(3_3_4 第三章_栈和队列/3_3_栈和队列的应用/第四题/3_3_4.cpp)

# 第五章 树与二叉树
add_executable(5_2_5 第五章_树与二叉树/5_2_二叉树的存储结构/第五题/5_2_5.cpp)
add_executable(5_3_3 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第三题/5_3_3.cpp)
add_executable(5_3_4 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第四题/5_3_4.cpp)
add_executable(5_3_5 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第五题/5_3_5.cpp)
add_executable(5_3_6 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第六题/5_3_6.cpp)
add_executable(5_3_7 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第七题/5_3_7.cpp)
add_executable(5_3_8 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第八题/5_3_8.cpp)
add_executable(5_3_9 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第九题/5_3_9.cpp)
add_executable(5_3_10 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十题/5_3_10.cpp)
add_executable(5_3_11 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十一题/5_3_11.cpp)
add_executable(5_3_12 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十二题/5_3_12.cpp)
add_executable(5_3_13 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十三题/5_3_13.cpp)
add_executable(5_3_14 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十四题/5_3_14.cpp)
add_executable(5_3_15 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十五题/5_3_15.cpp)
add_executable(5_3_16 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十六题/5_3_16.cpp)
add_executable(5_3_17 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十七题/5_3_17.cpp)
add_executable(5_3_18 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十八题/5_3_18.cpp)
add_executable(5_3_19 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第十九题/5_3_19.cpp)
add_executable(5_3_20 第五章_树与二叉树/5_3_二叉树的遍历和线索二叉树/第二十题/5_3_20.cpp)
add_executable(5_4_5 第五章_树与二叉树/5_4_树,森林/第五题/5_4_5.cpp)
